[gd_scene load_steps=16 format=3 uid="uid://di4mft2i2j7yn"]

[ext_resource type="Texture2D" uid="uid://bqadxu82feiq4" path="res://sprites/the front lower part of the cave.png" id="1_bes3c"]
[ext_resource type="Script" path="res://scenes/Anim_Blum.gd" id="1_mb4x4"]
[ext_resource type="Texture2D" uid="uid://5c0u7thmvt0g" path="res://sprites/front upper part of the cave.png" id="2_i7vgh"]
[ext_resource type="Texture2D" uid="uid://bfdu30qcxdvj5" path="res://sprites/TilemapCave.png" id="3_b4aos"]
[ext_resource type="Texture2D" uid="uid://ck3t7x12t4klr" path="res://sprites/blum.png" id="4_1goqc"]
[ext_resource type="Texture2D" uid="uid://b0eo0e1ei8vph" path="res://sprites/light.png" id="5_4y1k6"]
[ext_resource type="Texture2D" uid="uid://7s5uw7p7xydu" path="res://sprites/the right wall of the cave.png" id="7_7iuju"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e6pai"]
texture = ExtResource("3_b4aos")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0

[sub_resource type="TileSet" id="TileSet_c0n3n"]
sources/0 = SubResource("TileSetAtlasSource_e6pai")

[sub_resource type="AtlasTexture" id="AtlasTexture_qhrgb"]
atlas = ExtResource("4_1goqc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_67rtl"]
atlas = ExtResource("4_1goqc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn5bg"]
atlas = ExtResource("4_1goqc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xchk8"]
atlas = ExtResource("4_1goqc")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dky8"]
atlas = ExtResource("4_1goqc")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8koel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhrgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67rtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn5bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xchk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dky8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MapSprite" type="Node2D"]
script = ExtResource("1_mb4x4")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(5, -3)
rotation = 0.0033744
tile_set = SubResource("TileSet_c0n3n")
format = 2
layer_0/tile_data = PackedInt32Array(-262145, 65536, 0, -196609, 65536, 0, -131073, 65536, 0, -65537, 65536, 0, -1, 65536, 0, 65535, 65536, 0, 131071, 65536, 0, 196607, 65536, 0, 262143, 65536, 0, 327679, 65536, 0, -327680, 65536, 0, -262144, 65536, 0, -196608, 0, 0, -131072, 65536, 0, -65536, 65536, 0, 0, 65536, 0, 65536, 0, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, -327679, 65536, 0, -262143, 65536, 0, -196607, 65536, 0, -131071, 131072, 0, 65537, 65536, 0, 131073, 65536, 0, 196609, 65536, 0, 262145, 65536, 0, -327678, 65536, 0, -262142, 131072, 0, -196606, 131072, 1, -131070, 0, 1, 65538, 131072, 1, 131074, 131072, 2, 196610, 65536, 0, 262146, 65536, 0, -327677, 65536, 0, -262141, 196608, 0, -196605, 196608, 1, -131069, 65536, 2, -65533, 262144, 1, 3, 65536, 1, 65539, 196608, 1, 131075, 196608, 2, 196611, 65536, 0, 262147, 65536, 0, -327676, 65536, 0, -262140, 196608, 0, -196604, 196608, 1, -131068, 0, 2, -65532, 131072, 1, 4, 0, 1, 65540, 196608, 1, 131076, 196608, 2, 196612, 65536, 0, 262148, 65536, 0, -327675, 65536, 0, -262139, 262144, 0, -196603, 262144, 1, -131067, 65536, 1, -65531, 196608, 1, 5, 65536, 2, 65541, 262144, 1, 131077, 262144, 2, 196613, 65536, 0, 262149, 65536, 0, -327674, 65536, 0, -262138, 65536, 0, -196602, 65536, 0, -131066, 262144, 0, -65530, 262144, 1, 6, 262144, 2, 65542, 65536, 0, 131078, 65536, 0, 196614, 65536, 0, 262150, 65536, 0, -327673, 65536, 0, -262137, 65536, 0, -65529, 65536, 0, 7, 65536, 0, 65543, 65536, 0, 196615, 65536, 0, 262151, 65536, 0, -327672, 65536, 0, -262136, 65536, 0, -196600, 65536, 0, 8, 65536, 0, 65544, 65536, 0, 131080, 65536, 0, 196616, 65536, 0, 262152, 65536, 0, -327671, 65536, 0, -262135, 65536, 0, -196599, 65536, 0, -131063, 65536, 0, -65527, 65536, 0, 9, 65536, 0, 65545, 65536, 0, 131081, 65536, 0, 196617, 65536, 0, 262153, 65536, 0, 2, 0, 2, 1, 131072, 2, -65535, 131072, 1, -65534, 196608, 1, 131079, 0, 0, -65528, 0, 0, -131064, 65536, 0, -131065, 65536, 0, -196601, 0, 0)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()

[node name="point" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="point"]
offset_left = 64.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 31.0
scale = Vector2(0.63, 0.67)
color = Color(0.14902, 0.164706, 0.262745, 1)

[node name="ColorRect3" type="ColorRect" parent="point"]
offset_left = 39.0
offset_top = -14.0
offset_right = 55.0
offset_bottom = 0.999992
scale = Vector2(0.63, 0.67)
color = Color(0.14902, 0.164706, 0.262745, 1)

[node name="ColorRect5" type="ColorRect" parent="point"]
offset_left = 89.0
offset_top = -14.0
offset_right = 105.0
offset_bottom = 1.0
scale = Vector2(0.63, 0.67)
color = Color(0.14902, 0.164706, 0.262745, 1)

[node name="ColorRect7" type="ColorRect" parent="point"]
offset_left = 64.0
offset_top = -48.0
offset_right = 80.0
offset_bottom = -33.0
scale = Vector2(0.63, 0.67)
color = Color(0.14902, 0.164706, 0.262745, 1)

[node name="front_top_bottom_cave" type="Node2D" parent="."]

[node name="TheFrontLowerPartOfTheCave" type="Sprite2D" parent="front_top_bottom_cave"]
z_index = 5
position = Vector2(36, 66)
texture = ExtResource("1_bes3c")

[node name="TheFrontLowerPartOfTheCave2" type="Sprite2D" parent="front_top_bottom_cave"]
z_index = 5
position = Vector2(97, 66)
texture = ExtResource("1_bes3c")

[node name="FrontUpperPartOfTheCave" type="Sprite2D" parent="front_top_bottom_cave"]
z_index = 5
position = Vector2(35, -72)
texture = ExtResource("2_i7vgh")

[node name="FrontUpperPartOfTheCave2" type="Sprite2D" parent="front_top_bottom_cave"]
z_index = 5
position = Vector2(100, -72)
texture = ExtResource("2_i7vgh")
flip_h = true

[node name="Blum_anim" type="Node2D" parent="."]
z_index = 1

[node name="Animatedblum" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(26, -40)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.356979

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum2" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(85, -63)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.464069

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum2"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum3" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(124, -39)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum3"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum4" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(61, -64)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum4"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum5" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(24, -64)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum5"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum6" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(140, -7)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum6"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum7" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(130, 42)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum7"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum8" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(19, 25)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum8"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum9" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(77, 66)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum9"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum10" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(53, 71)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum10"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum11" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(16, 68)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum11"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum12" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(113, 71)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum12"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum13" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(143, 71)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum13"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Animatedblum14" type="AnimatedSprite2D" parent="Blum_anim"]
position = Vector2(123, -64)
sprite_frames = SubResource("SpriteFrames_8koel")
frame_progress = 0.19797

[node name="PointLight2D" type="PointLight2D" parent="Blum_anim/Animatedblum14"]
position = Vector2(-5, -5)
energy = 1.69
texture = ExtResource("5_4y1k6")
texture_scale = 0.02

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 10
position = Vector2(72, -3)

[node name="wallCave" type="Node2D" parent="."]

[node name="TheRightWallOfTheCave" type="Sprite2D" parent="wallCave"]
z_index = 6
position = Vector2(151, -27)
texture = ExtResource("7_7iuju")

[node name="TheRightWallOfTheCave2" type="Sprite2D" parent="wallCave"]
z_index = 6
position = Vector2(151, 87)
texture = ExtResource("7_7iuju")

[node name="TheRightWallOfTheCave3" type="Sprite2D" parent="wallCave"]
z_index = 6
position = Vector2(-6, -28)
texture = ExtResource("7_7iuju")
flip_h = true

[node name="TheRightWallOfTheCave4" type="Sprite2D" parent="wallCave"]
z_index = 6
position = Vector2(-6, 86)
texture = ExtResource("7_7iuju")
flip_h = true
